index html + ML

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,6 @@
-<!doctype html>
 
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-</head>
-
-<body>
-	<h2>Hello world</h2>
-  <script src="js/scripts.js"></script>
-</body>
-</html>
+<h2>Team Salmon:</h2>
+<a href="MichaelLablanc.html"> Michael Lablanc</a>
+<a href="SeanKelly.html"> Sean Kelly</a>
+<a href="JaegyeomKim.html"> Jaegyeom Kim</a>
+<a href="HaleyNicoulin.html"> Haley Nicoulin</a>
