Added favorite for sean

--- a/public/SeanKelly.html
+++ b/public/SeanKelly.html
@@ -1,1 +1,2 @@
-<p>Hi my name is Sean Kelly. I like fetticiune alfredo. I cant spell.</p>
+<p>Hi my name is Sean Kelly. I like to eat fetticiune alfredo in my pasttime. I cant spell.</p>
+<p>I love fetticine alfredo as my favorite food.</p>
