--- a/public/MichaelLablanc.html
+++ b/public/MichaelLablanc.html
@@ -1,1 +1,2 @@
 <p>I am Michael LaBlanc, my favorite pass time is listening and playing music. While coding.</p>
+<p>I am a huge fan of Seafood.</p>
