--- a/public/HaleyNicoulin.html
+++ b/public/HaleyNicoulin.html
@@ -1,3 +1,5 @@
 <p> I am Haley Nicoulin</p>
 
 <p> I love raving, hanging with my friends and play football.</p>
+
+<p> My favorite food is smoked salmon</p>
